--- a/style.css
+++ b/style.css
@@ -71,11 +71,12 @@ nav{
 }
 
 .table-header{
-    margin: 0 18em;
+    margin: 0 26em;
+    text-align: center;
 }
 
 .table{
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
     border-collapse: collapse;
     overflow: hidden;
     font-weight: bold;
@@ -83,7 +84,9 @@ nav{
 }
 
 .table-header h4{
+    background-color: #FAFAFA;
     color: #673AB7;
+    font-size: 20px;
 }
 
 .table thead th{
